show view added

--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
@@ -26,7 +26,7 @@
                 </ul>
 
                 <span class= "col-md-2">
-                    <a asp-action="Index" asp-controller="Ticket" asp-route-id="@Model.Id" class="btn btn-primary ticket-btn">Buy ticket</a>
+                    <a asp-action="Shows" asp-controller="Movie" asp-route-id="@Model.Id" class="btn btn-primary ticket-btn">Buy ticket</a>
                 </span>
                 <span class="col-md-2">
                     <a asp-action="Login" asp-controller="User" asp-route-id="@Model.Id" class="btn btn-primary ticket-btn">Make a reservation</a>
