--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Shows.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Shows.cshtml
@@ -6,10 +6,278 @@
 <h2>Shows</h2>
 @foreach (var show in Model)
 {
-    <p>@show.MovieTitle</p>
-    <p>@show.ShowTime</p>
-    <p>@show.EndDate</p>
-    <p>@show.StartDate</p>
+    <p>Movie Titile: @show.MovieTitle</p>
+    <p>Start date: @show.StartDate</p>
+    <p>End date: @show.EndDate</p>
+    <p>Show time: @show.ShowTime</p>
+    <p>Hall name: @show.HallTitle </p>
+    @foreach(var seat in @show.Seats)
+    {
+        <p>@seat.RowNumber @seat.SeatNumber</p>
+    }
 }
+<h2>Buy Ticket</h2>
+
+<div class="buy-ticket">
+    <div class="container">
+        <div class="buy-ticket-area">
+            <a href="#"><i class="icofont icofont-close"></i></a>
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="buy-ticket-box">
+                        <h4>Buy Tickets</h4>
+                        <h5>Seat</h5>
+                        <h6>Screen</h6>
+                        <div class="ticket-box-table">
+                            <table class="ticket-table-seat">
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                            </table>
+                            <table>
+                                <tr>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                </tr>
+                            </table>
+                            <table class="ticket-table-seat">
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td class="active">1</td>
+                                    <td class="active">1</td>
+                                    <td class="active">1</td>
+                                    <td class="active">1</td>
+                                    <td class="active">1</td>
+                                    <td class="active">1</td>
+                                    <td class="active">1</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                            </table>
+                            <table>
+                                <tr>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                </tr>
+                            </table>
+                            <table class="ticket-table-seat">
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="ticket-box-available">
+                            <input type="checkbox" />
+                            <span>Available</span>
+                            <input type="checkbox" checked />
+                            <span>Unavailable</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 offset-lg-1">
+                    <div class="buy-ticket-box mtr-30">
+                        <h4>Your Information</h4>
+                        <ul>
+                            <li>
+                                <p>Location</p>
+                                <span>HB Cinestar Box Corner</span>
+                            </li>
+                            <li>
+                                <p>TIME</p>
+                                <span>2018.07.09   20:40</span>
+                            </li>
+                            <li>
+                                <p>Movie name</p>
+                                <span>Random title</span>
+                            </li>
+                            <li>
+                                <p>Ticket number</p>
+                                <span>2 Adults, 2 Children</span>
+                            </li>
+                            <li>
+                                <p>Price</p>
+                                <span>120$</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
+@*<div class="container">
+        <div class='col-md-5'>
+            <div class="form-group">
+                <div class='input-group date' id='datetimepicker6'>
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class='col-md-5'>
+            <div class="form-group">
+                <div class='input-group date' id='datetimepicker7'>
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>*@
+
+
+@*<script>
+
+        $(document).ready(function () {
+            $("#EnterDate").datepicker({
+                dateFormat: "dd-mm-yy",
+                minDate: -0,
+                maxDate: "+0M +0D"
+
+            });
+        });
+    </script>*@
