--- a/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
+++ b/SEAVUS.Movie.Web/SEAVUS.Movie.Web/Views/Movie/Details.cshtml
@@ -3,34 +3,79 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
-
 <div>
-        <div class="thumbnail movies-details">
-            <img src="~/images/@Model.Image" alt="Movie image" style="display:block" width="100" class="pull-left details-img" />
-            <div class="caption">
-                <h3>Title: @Model.MovieTitle</h3>
-                <p> Description: @Model.Description</p>
-                <h5>Genre: @Model.Genre</h5>
-                <p>Director: @Model.Director</p>
-                <p>Language: @Model.Language</p>
-                <p>Tehnology: @Model.Technology</p>
-                <p>Release date: @Model.ReleaseDate</p>
-                <hr />
-                <p>Cast:</p>
-                <ul>
-                    @foreach (var actor in Model.Actors)
-                    {
-                        <li>@actor.FirstName @actor.LastName</li>
-                    }
-                </ul>
-
-                <span class= "col-md-2">
-                    <a asp-action="Shows" asp-controller="Movie" asp-route-id="@Model.Id" class="btn btn-primary ticket-btn">Buy ticket</a>
-                </span>
-                <span class="col-md-2">
-                    <a asp-action="Login" asp-controller="User" asp-route-id="@Model.Id" class="btn btn-primary ticket-btn">Make a reservation</a>
-                </span>
+    <div class="thumbnail movies-details">
+        <img src="~/images/@Model.Image" alt="Movie image" class="pull-left details-img" />
+        <div class="caption">
+            <h3>Title: @Model.MovieTitle</h3>
+            <p> Description: @Model.Description</p>
+            <h5>Genre: @Model.Genre</h5>
+            <p>Director: @Model.Director</p>
+            <p>Language: @Model.Language</p>
+            <p>Tehnology: @Model.Technology</p>
+            <p>Release date: @Model.ReleaseDate</p>
+            <hr />
+            <p>Cast:</p>
+            <ul>
+                @foreach (var actor in Model.Actors)
+                {
+                    <li>@actor.FirstName @actor.LastName</li>
+                }
+            </ul>
+            <hr />
+            <p>Shows:</p>
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>
+                                Days of week
+                            </th>
+                            <th>
+                                Hall
+                            </th>
+                            <th>
+                                Start Date
+                            </th>
+                            <th>
+                                End Date
+                            </th>
+                            <th>
+                                Show Time
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.Shows)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.StartDate.DayOfWeek),
+                                    @Html.DisplayFor(modelItem => item.EndDate.DayOfWeek)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.HallTitle)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.StartDate, "{0:dd/MM/yyyy}")
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.EndDate, "{0:dd/MM/yyyy}")
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ShowTime.TimeOfDay)
+                                </td>
+                                <td>
+                                    <a asp-action="Shows" asp-controller="Movie" asp-route-id="@item.HallId"><span class="glyphicon glyphicon glyphicon-tags"></span></a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
             </div>
+            <span class="col-md-2">
+                <a asp-action="Shows" asp-controller="Movie" asp-route-id="@Model.Id" class="btn btn-danger pull-left ticket-btn">Buy ticket</a>
+            </span>
         </div>
+    </div>
 </div>
